Initial project setup for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,14 @@
       "use": "@vercel/python"
     },
     {
-      "src": "static/**",
+      "src": "clients/static/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "dest": "/clients/static/$1"
     },
     {
       "src": "/(.*)",
