--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
+      "src": "/clients/static/(.*)",
       "dest": "/clients/static/$1"
     },
     {
